[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/ButtonContainer.gd" type="Script" id=1]
[ext_resource path="res://world/background.png" type="Texture" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Node
"

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 57.0
margin_bottom = 8.0
texture = ExtResource( 2 )

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -224.0
margin_right = 162.0
margin_bottom = 2.0
alignment = 1
script = ExtResource( 1 )

[node name="Start" type="Button" parent="ButtonContainer"]
margin_top = 79.0
margin_right = 330.0
margin_bottom = 99.0
text = "START"
script = SubResource( 1 )

[node name="Credits" type="Button" parent="ButtonContainer"]
margin_top = 103.0
margin_right = 330.0
margin_bottom = 123.0
text = "CREDITS"

[node name="Quit" type="Button" parent="ButtonContainer"]
margin_top = 127.0
margin_right = 330.0
margin_bottom = 147.0
text = "QUIT"

[node name="TutorialContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.0
margin_top = 68.0
margin_right = 374.0
margin_bottom = 139.0

[node name="Label" type="Label" parent="TutorialContainer"]
margin_top = 20.0
margin_right = 750.0
margin_bottom = 51.0
text = "HOW TO PLAY: Pressgang run a shot across the bow Barbary Coast. Barque topsail furl. Loot Shiver me timbers stern. 
Pressgang run a shot across the bow Barbary Coast. Barque topsail furl. Loot Shiver me timbers stern."
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -448.0
margin_top = 88.0
margin_right = 448.0
margin_bottom = 272.0
expand = true
stretch_mode = 6

[node name="CreditsPopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -228.0
margin_right = 480.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="CreditsPopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -476.0
margin_top = 4.0
margin_right = 476.0
margin_bottom = 356.0
text = "This game was made by:
ALL THE PEOPLE WHO MADE THE GAME GO HERE"

[connection signal="pressed" from="ButtonContainer/Start" to="ButtonContainer" method="_on_Start_pressed"]
[connection signal="pressed" from="ButtonContainer/Credits" to="ButtonContainer" method="_on_Credits_pressed"]
[connection signal="pressed" from="ButtonContainer/Quit" to="ButtonContainer" method="_on_Quit_pressed"]
